# TalentGraph

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/middleware/: __init__.py  error_handler.py
apps/api/routers/: __init__.py  analytics.py  candidates.py  health.py  jobs.py  submission.py  system.py
apps/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
apps/dashboard/src/: App.tsx  index.css
apps/dashboard/src/components/candidate/: CouncilVoteCard.tsx  EvidenceLedger.tsx
apps/dashboard/src/components/charts/: CareerTimeline.tsx  FeatureImportanceChart.tsx  FunnelChart.tsx  GenomeRadar.tsx  RiskDonut.tsx  ScoreDistribution.tsx
apps/dashboard/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
apps/dashboard/src/components/ui/: ConfidenceBadge.tsx  GlassCard.tsx  LoadingStates.tsx  MetricCard.tsx  RecommendationBadge.tsx  RiskBadge.tsx  ScoreBadge.tsx
apps/dashboard/src/lib/: api.ts  demo.ts  queryClient.ts  utils.ts
apps/dashboard/src/pages/: AnalyticsPage.tsx  CandidateDetailsPage.tsx  CandidateExplorerPage.tsx  DashboardPage.tsx  ExplainabilityPage.tsx  JobIntelligencePage.tsx  RankingsPage.tsx  SettingsPage.tsx
apps/dashboard/src/store/: appStore.ts
configs/: app.yaml  council.yaml  features.yaml  ranking.yaml
data/: submission.csv  submission.xlsx
data/raw/: job_description.txt
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.preprocessing  nginx.conf
scripts/: __init__.py  benchmark.py  evaluate.py  fix_and_rerank.py  generate_demo.py  preprocess.py  rank.py  validate_submission.py
services/analytics/: feature_importance.py  funnel_analytics.py  submission_generator.py
services/explainability/: __init__.py  counterfactual.py  explanation_generator.py  strength_analyzer.py  weakness_analyzer.py
services/intelligence/: __init__.py  behavior_engine.py  candidate_intelligence.py  career_engine.py  evidence_engine.py  job_intelligence.py  risk_engine.py
services/preprocessing/: __init__.py  bm25_builder.py  career_parser.py  checkpoint.py  cleaner.py  embedding_generator.py  faiss_builder.py  feature_extractor.py  feature_store.py  loader.py  parser.py  pipeline.py  quality_checker.py
services/ranking/: __init__.py  confidence_engine.py  feature_ranker.py  ranking_pipeline.py
services/ranking/council/: __init__.py  base_council.py  behavior_council.py  career_council.py  growth_council.py  hiring_council.py  risk_council.py  technical_council.py
services/retrieval/: __init__.py  bm25_retrieval.py  hybrid_retrieval.py  semantic_retrieval.py
shared/: __init__.py  config.py  constants.py  exceptions.py  logging_setup.py
shared/types/: __init__.py  analytics.py  candidate.py  council.py  job.py  ranking.py
shared/utils/: __init__.py  file_utils.py  math_utils.py  text_utils.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_api_endpoints.py
tests/unit/: __init__.py  test_feature_extractor.py
