[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "talentgraph-ai"
version = "0.1.0"
description = "TalentGraph AI — The AI Hiring Intelligence Platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "TalentGraph AI Team" }]
requires-python = ">=3.11"
keywords = ["ai", "recruitment", "hiring", "nlp", "faiss", "explainability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Data processing
    "polars>=0.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Database
    "duckdb>=0.10.0",
    # Vector search
    "faiss-cpu>=1.8.0",
    # NLP / Embeddings
    "sentence-transformers>=3.0.0",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "tokenizers>=0.19.0",
    # Sparse search
    "rank-bm25>=0.2.2",
    # ML utilities
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "joblib>=1.4.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Logging
    "loguru>=0.7.0",
    # Config
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "dateparser>=1.2.0",
    "phonenumbers>=8.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "Faker>=25.0.0",
]

[project.scripts]
tg-preprocess = "scripts.preprocess:app"
tg-rank = "scripts.rank:app"
tg-demo = "scripts.generate_demo:app"
tg-validate = "scripts.validate_submission:app"
tg-benchmark = "scripts.benchmark:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "services*", "shared*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.isort]
known-first-party = ["apps", "services", "shared", "scripts"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-fail-under=70"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["apps", "services", "shared"]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
